# seleniumlib

./: .gitignore  LICENSE  README.md  config.json  config.yml  example.py  main.py  pyproject.toml  requirements.txt
lib_selenium/: __init__.py  browser.py  lib_config.py  lib_logging.py
libs/: lib_config.py  lib_logging.py
seleniumlib/: __init__.py  browser.py  config.py  constants.py  logger.py
