[tool.poetry]
name = "seleniumlib"
version = "0.1.0"
description = "Library based on Selenium that drastically simplifies web automation workflows."
authors = ["overflowy <overflowy@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
packaging = "^21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
